--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,43 +1,35 @@
 // bower:scss
 // endbower
 
-$placeholder-40: #BDBDBD;
+@import 'reset';
 
-body {
-  background: #fafafa;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #333;
-}
+$padding: 0.5em;
+$border:  4px;
 
 body {
   display: flex;
-  justify-content: center;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
-[data-c-lead] {
-  flex: 1 100%;
-  background: $placeholder-40;
+[data-centurion] {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
-  h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
+[data-cc] {
+  flex: 1;
+  display: flex;
+  flex-flow: row wrap;
 }
 
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+@for $i from 1 through 6 {
+    [data-cc~="u#{$i}"] {
+        flex: 1 percentage(1 / $i);
+        min-width: 200px;
+        background: grey;
+        padding: $padding;
+        border: $border solid #FFF;
+    }
 }
