--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,18 +4,15 @@
 @import 'reset';
 
 $padding: 0.5em;
-$border:  4px;
-
-body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
+$border: 4px solid #FFF;
 
 [data-centurion] {
-  flex: 1;
   display: flex;
   flex-direction: column;
+  padding-left: $padding;
+  padding-right: $padding;
+  border-left: $border;
+  border-right: $border;
 }
 
 [data-cc] {
@@ -30,6 +27,6 @@ body {
         min-width: 200px;
         background: grey;
         padding: $padding;
-        border: $border solid #FFF;
+        border: $border;
     }
 }
