--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,6 +3,8 @@
 
 @import 'reset';
 
+$max-columns: 6;
+
 $padding: 0.5em;
 $border: 4px solid #FFF;
 
@@ -11,6 +13,10 @@ $border: 4px solid #FFF;
   flex-direction: column;
   padding-left: $padding;
   padding-right: $padding;
+}
+
+/* Only used for the first level */
+body > [data-centurion] {
   border-left: $border;
   border-right: $border;
 }
@@ -21,7 +27,7 @@ $border: 4px solid #FFF;
   flex-flow: row wrap;
 }
 
-@for $i from 1 through 6 {
+@for $i from 1 through $max-columns {
     [data-cc~="u#{$i}"] {
         flex: 1 percentage(1 / $i);
         min-width: 200px;
