clean up html a bit. Centre things within each container by default

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,5 +34,10 @@ body > [data-centurion] {
         background: grey;
         padding: $padding;
         border: $border;
+
+        /*Child elements*/
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
